Project 3 updates
